reset action path in form

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <div class="container__block">
           <div class="region region-content">
     
-<form class="user-info-from-cookie" action="/user/register" method="post" id="user-register-form" accept-charset="UTF-8" _lpchecked="1"><div><div id="edit-message" class="form-item form-type-item">
+<form class="user-info-from-cookie" action="send.php" method="post" id="user-register-form" accept-charset="UTF-8" _lpchecked="1">
+<div><div id="edit-message" class="form-item form-type-item">
  <h2 class="auth-heading">Create a DoSomething.org account to get started!</h2>
 </div>
 <div class="auth-twocol form-wrapper" id="edit-field-first-name"><div id="field-first-name-add-more-wrapper"><div class="form-item form-type-textfield form-item-field-first-name-und-0-value">
