--- a/index.html
+++ b/index.html
@@ -15,12 +15,22 @@
       <div class="container__block">
           <div class="region region-content">
     
-<form class="user-info-from-cookie" action="send.php" method="post" id="user-register-form" accept-charset="UTF-8" _lpchecked="1">
-<div><div id="edit-message" class="form-item form-type-item">
+<form class="user-info-from-cookie" action="thanYou.html" method="post" id="user-register-form" accept-charset="UTF-8" _lpchecked="1">
+<div>
+
+<div id="edit-message" class="form-item form-type-item">
  <h2 class="auth-heading">Create a DoSomething.org account to get started!</h2>
 </div>
-<div class="auth-twocol form-wrapper" id="edit-field-first-name"><div id="field-first-name-add-more-wrapper"><div class="form-item form-type-textfield form-item-field-first-name-und-0-value">
-  <label class="field-label" for="edit-field-first-name-und-0-value"><div class="validation"><div class="validation__label">First Name <span class="form-required" title="This field is required.">*</span></div><div class="validation__message"></div></div></label>
+
+<div class="auth-twocol form-wrapper" id="edit-field-first-name"><div id="field-first-name-add-more-wrapper">
+<div class="form-item form-type-textfield form-item-field-first-name-und-0-value">
+  <label class="field-label" for="edit-field-first-name-und-0-value">
+  <div class="validation"><div class="validation__label">First Name <span class="form-required" title="This field is required.">*</span>
+  </div>
+  <div class="validation__message">
+  </div>
+  </div>
+  </label>
  <input class="js-validate text-field required" placeholder="What do we call you?" data-validate="name" data-validate-required="" type="text" id="edit-field-first-name-und-0-value" name="field_first_name[und][0][value]" value="" size="60" maxlength="255">
 </div>
 </div></div><div class="form-item form-type-container">
@@ -37,7 +47,9 @@
 <div id="edit-account" class="form-wrapper"><input class="username" type="hidden" name="name" value="zJWcU8roTJ">
 <input type="hidden" name="timezone" value="UTC">
 <div class="form-item form-type-textfield form-item-mail">
-  <label class="field-label" for="edit-mail"><div class="validation"><div class="validation__label">Email <span class="form-required" title="This field is required.">*</span></div><div class="validation__message"></div></div></label>
+  <label class="field-label" for="edit-mail"><div class="validation">
+  <div class="validation__label">Email <span class="form-required" title="This field is required.">*</span></div><div class="validation__message">
+  </div></div></label>
  <input placeholder="your_email@example.com" class="js-validate text-field required" data-validate="email" data-validate-required="" type="text" id="edit-mail" name="mail" value="" size="60" maxlength="254">
 </div>
 <div class="field-type-text field-name-field-mobile field-widget-text-textfield form-wrapper" id="edit-field-mobile"><div id="field-mobile-add-more-wrapper"><div class="form-item form-type-textfield form-item-field-mobile-und-0-value">
@@ -61,10 +73,12 @@
 <input class="button form-submit" type="submit" id="edit-submit" name="op" value="Submit"></div>
 
 
-</div></form>  </div>
-      </div>
-    </div>
-  </main>
+</div>
+</form> 
+</div>
+</div>
+</div>
+</main>
 
 
 </body>
