rename action in index

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container__block">
           <div class="region region-content">
     
-<form class="user-info-from-cookie" action="thanYou.html" method="post" id="user-register-form" accept-charset="UTF-8" _lpchecked="1">
+<form class="user-info-from-cookie" action="thankYou" method="post" id="user-register-form" accept-charset="UTF-8" _lpchecked="1">
 <div>
 
 <div id="edit-message" class="form-item form-type-item">
