--- a/thankYou.html
+++ b/thankYou.html
@@ -11,7 +11,36 @@
 <body>
 
 
-<p> Thank you ;) </p>
+<?php
+require('vendor/autoload.php');
+define('AMQP_DEBUG', true);
+use PhpAmqpLib\Connection\AMQPConnection;
+use PhpAmqpLib\Message\AMQPMessage;
+$url = parse_url(getenv('CLOUDAMQP_URL'));
+$conn = new AMQPConnection($url['host'], 5672, $url['user'], $url['pass'], substr($url['path'], 1));
+$ch = $conn->channel();
+
+$exchange = 'amq.direct';
+$queue = 'basic_get_queue';
+$ch->queue_declare($queue, false, true, false, false);
+$ch->exchange_declare($exchange, 'direct', true, true, false);
+$ch->queue_bind($queue, $exchange);
+
+$msg_body = 'the body';
+$msg = new AMQPMessage($msg_body, array('content_type' => 'text/plain', 'delivery_mode' => 2));
+$ch->basic_publish($msg, $exchange);
+
+$retrived_msg = $ch->basic_get($queue);
+var_dump($retrived_msg->body);
+	echo "<p bgcolor=\"red\"> Thank you ;)". $retrived_msg->body ."</p>";
+
+$ch->basic_ack($retrived_msg->delivery_info['delivery_tag']);
+
+$ch->close();
+$conn->close();
+ 
+  
+ ?>
 
 </body>
 </html>
