--- a/thankYou.html
+++ b/thankYou.html
@@ -31,7 +31,7 @@ $msg = new AMQPMessage($msg_body, array('content_type' => 'text/plain', 'deliver
 $ch->basic_publish($msg, $exchange);
 
 $retrived_msg = $ch->basic_get($queue);
-var_dump($retrived_msg->body);
+//var_dump($retrived_msg->body);
 	echo "<p bgcolor=\"red\"> Thank you ;)". $retrived_msg->body ."</p>";
 
 $ch->basic_ack($retrived_msg->delivery_info['delivery_tag']);
