action became sendemail

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+
+
+
+
 <!DOCTYPE HTML>
 <html> 
 
@@ -15,7 +19,7 @@
       <div class="container__block">
           <div class="region region-content">
     
-<form class="user-info-from-cookie" action="thankYou.php" method="post" id="user-register-form" accept-charset="UTF-8" _lpchecked="1">
+<form class="user-info-from-cookie" action="sendemail.php" method="post" id="user-register-form" accept-charset="UTF-8" _lpchecked="1">
 <div>
 
 <div id="edit-message" class="form-item form-type-item">
