--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <div class="container__block">
           <div class="region region-content">
-<form class="user-info-from-cookie" action="formHandler.php" method="post" id="user-register-form" accept-charset="UTF-8" _lpchecked="1">
+<form class="user-info-from-cookie" action="thankYou.php" method="post" id="user-register-form" accept-charset="UTF-8" _lpchecked="1">
 <div>
 
 <!-- *************************************************************************** -->
