update sendemail page

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </div>
   </div>
   </label>
- <input placeholder="your_email@example.com" class="js-validate text-field required" data-validate="email" data-validate-required="" type="text" id="edit-mail" name="mail" value="" size="60" maxlength="254">
+  <input placeholder="your_email@example.com" class="text-field required" data-validate="email" data-validate-required="" type="text" id="edit-mail" name="mail"  size="60" maxlength="254">
 </div>
 <!-- *************************************************************************** -->
 
