update sendemail page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
   </div>
   </label>
-  <input class="js-validate text-field required" placeholder="What do we call you?" data-validate="name" data-validate-required="" type="text" id="edit-field-first-name-und-0-value" name="field_first_name" value="" size="60" maxlength="255">
+  <input class="js-validate text-field required" placeholder="What do we call you?" data-validate="name" data-validate-required="" type="text" id="edit-field-first-name-und-0-value" name="field_first_name" size="60" maxlength="255">
 </div>
 </div>
 </div>
