--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
  </div>
  </label>
  <div class="date-date">
- <input class="js-validate text-field" placeholder="MM/DD/YYYY" data-validate="birthday" data-validate-required="" type="text" id="edit-field-birthdate-und-0-value-date" name="field_birthdate" value="" size="60" maxlength="128"></div>
+ <input class="js-validate text-field" placeholder="MM/DD/YYYY" data-validate="birthday" data-validate-required="" type="text" id="edit-field-birthdate-und-0-value-date" name="field_birthdate" size="60" maxlength="128"></div>
 </div>
 </div>
 </div>
@@ -104,7 +104,7 @@
   </div>
   </div>
   </label>
- <input class="js-validate text-field" placeholder="(555) 555-5555" data-validate="phone" type="text" id="edit-field-mobile-und-0-value" name="field_mobile" value="" size="60" maxlength="255">
+ <input class="js-validate text-field" placeholder="(555) 555-5555" data-validate="phone" type="text" id="edit-field-mobile-und-0-value" name="field_mobile" size="60" maxlength="255">
 </div>
 </div>
 </div>
