--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <!-- *************************************************************************** -->
 
 <body>
-
+<header role="banner" class="header ">
+  <div class="wrapper">
+    
+      </div>
+</header>
 
 <main role="main" class="container -padded">
     <div class="wrapper">
