--- a/index.html
+++ b/index.html
@@ -10,11 +10,20 @@
 <!-- *************************************************************************** -->
 
 <body>
+
+<nav class="navigation -white -floating">
+  <a class="navigation__logo" href="/"><span>DoSomething.org</span></a>
+  <div class="navigation__menu">
+  </div>
+</nav>
+<!-- *************************************************************************** -->
+
 <header role="banner" class="header ">
   <div class="wrapper">
     
       </div>
 </header>
+<!-- *************************************************************************** -->
 
 <main role="main" class="container -padded">
     <div class="wrapper">
