--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <!-- *************************************************************************** -->
 
 <body>
+<div class="wrapper">
 
+<!-- *************************************************************************** -->
 <nav class="navigation -white -floating">
   <a class="navigation__logo" href="/"><span>DoSomething.org</span></a>
   <div class="navigation__menu">
@@ -175,7 +177,7 @@
 </div>
 </div>
 </main>
-
+</div>
 
 </body>
 </html>
