--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head> 
 <!-- *************************************************************************** -->
 
-<body>
+<body class="html not-front logged-in no-sidebars page-user page-user- page-user-4362809 page-user-edit i18n-en">
 <div class="wrapper">
 
 <!-- *************************************************************************** -->
