--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 <!-- *************************************************************************** -->
 
 <body class="html not-front logged-in no-sidebars page-user page-user- page-user-4362809 page-user-edit i18n-en">
+  <div class="chrome">
+
 <div class="wrapper">
 
 <!-- *************************************************************************** -->
@@ -204,6 +206,6 @@
 </div>
 </main>
 </div>
-
+</div>
 </body>
 </html>
