--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head> 
 <!-- *************************************************************************** -->
 
-<body class="html not-front logged-in no-sidebars page-user page-user- page-user-4362809 page-user-edit i18n-en">
+<body>
   <div class="chrome">
 
 <div class="wrapper">
@@ -82,7 +82,7 @@
   </div>
   </div>
   </label>
-  <input class="js-validate text-field required" placeholder="What do we call you?" data-validate="name" data-validate-required="" type="text" id="edit-field-first-name-und-0-value" name="field_first_name" size="60" maxlength="255">
+  <input class="js-validate text-field required" ,"required"= true, placeholder="What do we call you?" data-validate="name" data-validate-required="" type="text" id="edit-field-first-name-und-0-value" name="field_first_name" size="60" maxlength="255">
 </div>
 </div>
 </div>
@@ -102,7 +102,8 @@
  <div id="edit-field-birthdate-und-0-value" class="date-padding clearfix">
  <div class="form-item form-type-textfield form-item-field-birthdate-und-0-value-date">
  <label class="field-label" for="edit-field-birthdate-und-0-value-date">
- <div class="validation"><div class="validation__label">Birthday </div>
+ <div class="validation">
+ <div class="validation__label">Birthday </div>
  <div class="validation__message">
  </div>
  </div>
