--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 </nav>
 <!-- *************************************************************************** -->
 
+<header role="banner" class="header ">
+
+</header>
+<!-- *************************************************************************** -->
+
 <main role="main" class="container -padded">
     <div class="wrapper">
       <div class="container__block">
@@ -73,7 +78,7 @@
   </div>
   </div>
   </label>
-  <input class="js-validate text-field required" ,"required"= true, placeholder="What do we call you?" data-validate="name" data-validate-required="" type="text" id="edit-field-first-name-und-0-value" name="field_first_name" size="60" maxlength="255">
+  <input class="js-validate text-field required" ,required, placeholder="What do we call you?" data-validate="name" data-validate-required="" type="text" id="edit-field-first-name-und-0-value" name="field_first_name" size="60" maxlength="255">
 </div>
 </div>
 </div>
