--- a/index.html
+++ b/index.html
@@ -4,16 +4,11 @@
 
 <head> 
 
-  <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-  <title>Registration|DoSomething.org</title>
-  <link type="text/css" rel="stylesheet" href="https://www.dosomething.org/profiles/dosomething/themes/dosomething/paraneue_dosomething/dist/app.css?ohih8l" media="all">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <link href="https://www.dosomething.org/profiles/dosomething/themes/dosomething/paraneue_dosomething/logo.png" rel="image_src">
-  <link href="https://www.dosomething.org/profiles/dosomething/themes/dosomething/paraneue_dosomething/logo.png" rel="kik-icon">
-
-  
+  <title>Registration|DoSomething.org</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head> 
 <!-- *************************************************************************** -->
 
@@ -27,26 +22,18 @@
   <a class="navigation__logo" href="/"><span>DoSomething.org</span></a>
 </nav>
 <!-- *************************************************************************** -->
-<header role="banner" class="header "> </header>
+<header class="header "> </header>
 <!-- *************************************************************************** -->
 
-<main role="main" class="container -padded">
+<main class="container -padded">
     <div class="wrapper">
-      <div class="container__block">
-          <div class="region region-content">
-<form class="user-info-from-cookie" action="formHandler.php" method="post" id="user-register-form" accept-charset="UTF-8" _lpchecked="1">
-<div>
-
+<form action="formHandler.php" method="post" id="user-register-form" accept-charset="UTF-8" _lpchecked="1">
+   
 <!-- *************************************************************************** -->
-
-<div id="edit-message" class="form-item form-type-item">
  <h2 class="auth-heading">Create a DoSomething.org account to get started!</h2>
-</div>
 <!-- *************************************************************************** -->
 
-
-
-<div class="auth-twocol form-wrapper" id="edit-field-first-name">
+<div class="auth-twocol">
   <label class="field-label" for="edit-field-first-name-und-0-value">
   <div>First Name </div>
   </label>
@@ -54,71 +41,63 @@
 </div>
 <!-- *************************************************************************** -->
 
- <fieldset class="form-wrapper">
- <div class="form-item form-type-date-text form-item-field-birthdate-und-0-value">
+ <fieldset>
+ <div class="form-item">
  <label class="field-label" for="edit-field-birthdate-und-0-value-date">
   <div>Birthday </div>
  </label>
- <div class="date-date">
+ <div>
  <input class="text-field" placeholder="MM/DD/YYYY" required type="text" id="edit-field-birthdate-und-0-value-date" name="field_birthdate" size="60" maxlength="128">
  </div>
 </div>
 </fieldset>
 
 <!-- *************************************************************************** -->
-
-<div id="edit-account" class="form-wrapper">
-
-<!-- *************************************************************************** -->
-<div class="form-item form-type-textfield form-item-mail">
+<div class="form-item">
   <label class="field-label" for="edit-mail">
   <div>Email </div>
   </label>
   <input placeholder="your_email@example.com" class="text-field" required type="text" id="edit-mail" name="mail"  size="60" maxlength="254">
 </div>
 <!-- *************************************************************************** -->
-
-<div class="field-type-text field-name-field-mobile field-widget-text-textfield form-wrapper" id="edit-field-mobile">
-<div class="form-item form-type-textfield form-item-field-mobile-und-0-value">
+<div class="form-item">
   <label class="field-label" for="edit-field-mobile-und-0-value">
    <div>Cell Number <em>(optional)</em>  </div>
   </label>
  <input class="text-field" placeholder="(555) 555-5555"  type="text" id="edit-field-mobile-und-0-value" name="field_mobile" size="60" maxlength="255">
 </div>
-</div>
+
 
 <!-- *************************************************************************** -->
- <div class="form-item form-type-password form-item-pass-pass1">
+ <div class="form-item">
   <label class="field-label" for="edit-pass-pass1">
   <div>Password </div>
   </label>
- <input class="text-field required" placeholder="6+ characters... make it tricky!"  type="password" required id="edit-pass-pass1" name="pass" size="25" maxlength="128">
+ <input class="text-field" placeholder="6+ characters... make it tricky!"  type="password" required id="edit-pass-pass1" name="pass" size="25" maxlength="128">
  </div>
 <!-- *************************************************************************** -->
 
-<div class="form-item form-type-password form-item-pass-pass2">
+<div class="form-item">
   <label class="field-label" for="edit-pass-pass2">
   <div>Confirm Password </div>
   </label>
-  <input class="text-field required" placeholder="Just double checking!" type="password" required id="edit-pass-pass2" name="passconfirm" size="25" maxlength="128">
+  <input class="text-field" placeholder="Just double checking!" type="password" required id="edit-pass-pass2" name="passconfirm" size="25" maxlength="128">
 </div>
 
 <!-- *************************************************************************** -->
 
-</div>
+
 
 <!-- *************************************************************************** -->
 
-<div class="form-actions form-wrapper" id="edit-actions">
-<input class="button form-submit" type="submit" id="edit-submit" name="Submit" value="Submit">
+<div class="form-actions" id="edit-actions">
+<input class="button" type="submit" id="edit-submit" name="Submit" value="Submit">
 </div>
 <!-- *************************************************************************** -->
 
 
-</div>
+
 </form> 
-</div>
-</div>
 </div>
 </main>
 </div>
