--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Registration|DoSomething.org</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head> 
 <!-- *************************************************************************** -->
 
