--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
   <title>Registration|DoSomething.org</title>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
   <script type="text/javascript" src="js/script.js"></script>
-
+  <script>
+          function validateForm()
+         {
+             var x=document.forms["myForm"]["field_first_name"].value;
+             if (x==null || x=="")
+            {
+               alert("First name must be filled out");
+               return false;
+            }
+         }
+</script>
 </head> 
 
 <!-- *************************************************************************** -->
@@ -30,7 +40,7 @@
 
 <main class="container -padded">
     <div class="wrapper">
-<form action="formHandler.php" method="post" accept-charset="UTF-8" _lpchecked="1">
+<form name="myForm" onsubmit="return validateForm()" action="formHandler.php" method="post" accept-charset="UTF-8" _lpchecked="1">
    
 <!-- *************************************************************************** -->
  <h2 class="auth-heading">Create a DoSomething.org account to get started!</h2>
