--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
              if (x==null || x=="")
             {
                //alert("First name must be filled out");
-			   document.getElementById('fnvalidation').innerHTML="this is invalid name";
+			   //document.getElementById('fnvalidation').innerHTML="this is invalid name";
+			     document.forms["myForm"]["fnvalidation"].innerHTML="this is invalid name";
+
+			   
 
                return false;
 			  
@@ -52,9 +55,9 @@
 <div class="auth-twocol">
   <label class="field-label" for="edit-field-first-name-und-0-value">
   <div>First Name </div>
+  <div name="fnvalidation"></div>
   </label>
   <input class="text-field"  placeholder="What do we call you?" type="text" id="edit-field-first-name" name="field_first_name" size="60" maxlength="255">
-  <div id="fnvalidation"></div>
 </div>
 <!-- *************************************************************************** -->
 
