--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div>First Name </div>
   </label>
   <input class="text-field"  placeholder="What do we call you?" type="text" id="edit-field-first-name" name="field_first_name" size="60" maxlength="255">
-  <div name="fnvalidation" class="validation__message"></div>
+  <div name="fnvalidation"></div>
 
 </div>
 <!-- *************************************************************************** -->
