--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
              var x=document.forms["myForm"]["field_first_name"].value;
              if (x==null || x=="")
             {
-               //alert("First name must be filled out");
-			   document.getElementById('fnvalidation').innerHTML="this is invalid name";
+               alert("First name must be filled out");
+			   //document.getElementById('fnvalidation').innerHTML="this is invalid name";
                return false;
 			  
             }
+			
          }
 </script>
 </head> 
