--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div>First Name </div>
   </label>
   <input class="text-field"  placeholder="What do we call you?" type="text" id="edit-field-first-name" name="field_first_name" size="60" maxlength="255">
-  <div id="fnvalidation" class="validation__message"></div>
+  <div id="fnvalidation" class="error_msg"></div>
 
 </div>
 <!-- *************************************************************************** -->
