--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                return false;
 			  
             }
-			else if (birthdate==null || birthdate=="")
+		    if (birthdate==null || birthdate=="")
 			{
 			    document.getElementById('birth_validation').innerHTML="this is invalid date";
                 return false;
