--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           function validateForm()
          {
              var firstname=document.forms["myForm"]["field_first_name"].value;
-             var birthdate=document.forms["myForm"]["field_first_name"].value;
+             var birthdate=document.forms["myForm"]["field_birthdate"].value;
 
              if (firstname==null || firstname=="")
 			 
