--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <div class="chrome">
 <div class="wrapper">
 
-<!-- *************************************************************************** -->
+<!-- **************************** Navigation bar ******************************* -->
 <nav class="navigation -white -floating">
   <a class="navigation__logo" href="/"><span>DoSomething.org</span></a>
 </nav>
-<!-- *************************************************************************** -->
+<!-- **************************** Header *************************************** -->
 <header class="header "> </header>
-<!-- *************************************************************************** -->
+<!-- ***************************** Form *************************************** -->
 
 <main class="container -padded">
     <div class="wrapper">
@@ -32,7 +32,8 @@
    
 <!-- *************************************************************************** -->
  <h2 class="auth-heading">Create a DoSomething.org account to get started!</h2>
-<!-- *************************************************************************** -->
+ 
+<!-- ************************* First Name field ******************************** -->
 
 <div class="auth-twocol">
   <label class="field-label" for="edit-field-first-name-und-0-value">
@@ -42,7 +43,7 @@
   <div id="fn_validation" class="error_msg"></div>
 
 </div>
-<!-- *************************************************************************** -->
+<!-- *************************** Birthday field********************************* -->
 
  <fieldset>
  <div class="form-item">
@@ -56,7 +57,7 @@
 </div>
 </fieldset>
 
-<!-- *************************************************************************** -->
+<!-- ****************************** Email field *********************************** -->
 <div class="form-item">
   <label class="field-label" for="edit-mail">
   <div>Email </div>
@@ -64,7 +65,7 @@
   <input placeholder="your_email@example.com" class="text-field"  type="text" id="edit-mail" name="mail"  size="60" maxlength="254">
   <div id="email_validation" class="error_msg"></div>
 </div>
-<!-- *************************************************************************** -->
+<!-- ***************************** Cell Number field ******************************** -->
 <div class="form-item">
   <label class="field-label" for="edit-field-mobile-und-0-value">
    <div>Cell Number <em>(optional)</em>  </div>
@@ -75,7 +76,7 @@
 </div>
 
 
-<!-- *************************************************************************** -->
+<!-- *************************** Password ****************************** -->
  <div class="form-item">
   <label class="field-label" for="edit-pass-pass1">
   <div>Password </div>
@@ -83,7 +84,7 @@
  <input class="text-field" placeholder="6+ characters... make it tricky!"  type="password"  id="edit-pass-pass1" name="pass" size="25" maxlength="128">
  <div id="pass_validation" class="error_msg"></div>
  </div>
-<!-- *************************************************************************** -->
+<!-- ************************* Password confirmation******************** -->
 
 <div class="form-item">
   <label class="field-label" for="edit-pass-pass2">
@@ -93,7 +94,7 @@
   <div id="pass2_validation" class="error_msg"></div>
 </div>
 
-<!-- *************************************************************************** -->
+<!-- ************************** Submit button **************************** -->
 
 <div class="form-actions" id="edit-actions">
 <input class="button" type="submit" id="edit-submit" name="Submit" value="Submit" >
